<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FABB33"
    tools:context=".Register">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="316dp"
        android:layout_height="66dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FF9800">

        <EditText
            android:id="@+id/erepass"
            android:layout_width="309dp"
            android:layout_height="41dp"
            android:background="@drawable/custom_button3"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:paddingRight="50dp"
            android:ems="10"
            android:hint="@string/erepass"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Re - Password"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <EditText
        android:id="@+id/Task"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_button3"
        android:drawableLeft="@drawable/personn"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        tools:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Nama"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmbold"
        android:text="@string/Idaftar"
        android:textColor="#000000"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Email"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="316dp"
        android:layout_height="66dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FF9800">

        <EditText
            android:id="@+id/TimeTask"
            android:layout_width="309dp"
            android:layout_height="41dp"
            android:background="@drawable/custom_button3"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/epass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Password"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <EditText
        android:id="@+id/JenisTask"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_button3"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="81dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/register" />

    <Button
        android:id="@+id/btnRegist"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/mmbold"
        android:hint="@string/BtnRegist"
        android:text="Register"
        android:textColor="#FF4800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878" />


</androidx.constraintlayout.widget.ConstraintLayout>