<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FABB33"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmbold"
        android:text="Welcome in ToDo App !"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="201dp"
        app:layout_constraintBottom_toTopOf="@+id/edEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:srcCompat="@drawable/home" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="286dp"
        android:layout_height="53dp"
        android:background="@drawable/custombutton2"
        android:drawableLeft="@drawable/emaill"
        android:drawablePadding="10dp"
        android:ems="10"
        android:paddingRight="10dp"
        android:fontFamily="@font/mmedium"
        android:hint="@string/tEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Email"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="286dp"
        android:layout_height="53dp"
        android:background="@drawable/custombutton2"
        android:ems="10"
        android:fontFamily="@font/mmedium"
        android:hint="@string/tPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingRight="10dp"
        android:paddingLeft="8dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="117dp"
        android:layout_height="49dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/mmbold"
        android:text="@string/bsignin"
        android:textColor="#FF4800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:text="Password"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/regist"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:clickable="true"
        android:fontFamily="@font/mmedium"
        android:text="Register"
        android:textColor="#FF4800"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="28dp"
        android:fontFamily="@font/mmbold"
        android:text="New in ToDo App?"
        android:textColor="#000000"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

</androidx.constraintlayout.widget.ConstraintLayout>